Changing project and app names

--- a/SaveAppleHealthDataExample/Info.plist
+++ b/SaveAppleHealthDataExample/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>CFBundleDisplayName</key>
+	<string>HealthKitMockCreator</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -20,6 +22,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSHealthShareUsageDescription</key>
+	<string>"Please give us the reading permission to allow the app to work."</string>
+	<key>NSHealthUpdateUsageDescription</key>
+	<string>"Please give us the update permission to add data into Apple Health."</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -60,9 +66,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-    <key>NSHealthShareUsageDescription</key>
-    <string>"Please give us the reading permission to allow the app to work."</string>
-    <key>NSHealthUpdateUsageDescription</key>
-    <string>"Please give us the update permission to add data into Apple Health."</string>
 </dict>
 </plist>
